
- Project Lead
Hypo Klarich - TimeWalk - Cell: 714-614-4956
Project File Responsibility
- GameObject.cs
- GameInterface.cs
- CollisionManager.cs
- PhysicsManager.cs
Current Assignments: Physics and Movement

- System Designer
Mike Villar - macv101 - Cell: 714-869-6646
Project File Responsibility
- GameOject.cs
- GameInterface.cs
- Program.cs
Current Assignments: Input Manager
Previous Assignments: GameMouse, FPS Manager, Debugger

- Visual / Audio Designer
Eric Flowers - Flowers61 - Cell: 951-973-8308
Project File Responsibility
- Animation.cs
- Sprite.cs
Current Assignments: SoundManager

- Interface Designer
Jacqulyn Wong - MistressRuri - Cell: 209-814-5446
Project File Responsibility
- Program.cs
- Game1.cs
Current Assignments: Screen Manager, Interface

- Gameplay Designer
Wasiem - arabwes - Cell: 313-234-3263
Project File Responsibility
- Game1.cs
Current Assignment: GameDesign

//////////////////////////////////////////////////////////////////////////

- Project Overview
- Create a C# XNA Game Engine that is reusable.
- Focus your efforts on the Fish Game, A Was's Waldo style game

//////////////////////////////////////////////////////////////////////////


//////////////////////////////////////////////////////////////////////////
// Example Format --													//
//////////////////////////////////////////////////////////////////////////
// XNAGameEngine | Hypo Klarich | 3/11/2014								//
// -CollisionManager.cs -Game1.cs -GameInterface.cs -GameObject.cs		//
// -Time: 11am - 1:38pm = 2:38											//
// -Notes: Collision is up and running. This is an un-optimized version //
// but is good enough for our first few projects.						//
//////////////////////////////////////////////////////////////////////////

XNAGameEngine | Hypo Klarich | 3/13/2014
-CollisionManager.cs -Debug.cs -Gaame1.cs -GameObjects.cs -PhysicsManager.cs
-Time 9:30 am - 11:12 am = 1:42
-Notes: Drasticaly improved the collision, still some problems that have been